--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ifj24-syntax-higlighting",
   "displayName": "IFJ24 Syntax Higlighting",
   "description": "Syntax higlighting for ifj24 language",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "matejkrenek",
   "engines": {
     "vscode": "^1.94.0"
@@ -31,7 +31,12 @@
         "scopeName": "source.ifj24",
         "path": "./syntaxes/ifj24.tmLanguage.json"
       }
-    ]
+    ],
+    "icon": {
+      ".ifj": "./icons/ifj-icon.png", 
+      ".ifj24": "./icons/ifj-icon.png"
+    }
+    
   },
   "activationEvents": [
     "onLanguage:ifj"
